# eternalreturn-easy-storestats

./: .gitignore  AGENTS.md  API_BEHAVIOR_NOTES.md  LICENSE  README.md  ingest.sample.toml  pyproject.toml  requirements.txt
.github/workflows/: python-app.yml
api-result-examples/: character-attributes.json  existing-user-no-games.json  game-result-keys.json  game-result.json  get-charcter-attributes.ps1  get-game-result.ps1  get-item-armor.ps1  get-item-weapon.ps1  get-player-nickname.ps1  get-season.ps1  get-unbounded-uid-games.ps1  get-user-games.ps1  item-armor.json  item-weapon.json  player-nickname.json  season.json  unbounded-uid-games.json  user-games.json
constants/: area_code.csv  mastery_code.csv
er_stats/: __init__.py  aggregations.py  api_client.py  cli.py  db.py  ingest.py  parquet_export.py
scripts/: run_tests.ps1  run_tests.sh
sql-queries/: AGENTS.md  README.md  avg_bori_box.duckdb.sql  death_map_all.duckdb.sql  death_timemap.duckdb.sql  get_seed.duckdb.sql  ingest_trio_victory.duckdb.sql  skin_usage.duckdb.sql  trio_anchor_partner_performance.duckdb.sql  trio_pair_performance.duckdb.sql
src/er_stats/: aggregations.py  api_client.py  cli.py  config.py  db.py  ingest.py  parquet_export.py  tools_cli.py
tests/: conftest.py  test_aggregations.py  test_api_client.py  test_cli.py  test_cli_config.py  test_cli_nickname.py  test_cli_parquet.py  test_db.py  test_e2e.py  test_ingest.py  test_migrations.py  test_parquet_buffer.py  test_parquet_new_fields.py  test_parquet_rebuild.py  test_refetch_incomplete.py  test_tools_prune.py  test_users_upsert_latest_only.py
