[project]
name = "er-stats"
version = "0.1.0"
description = "Ingest Eternal Return API data into SQLite and run lightweight analytics."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
  { name = "Philmist" }
]
dependencies = [
  "requests>=2.31.0",
  "pyarrow>=13.0.0",
]

[project.urls]
Repository = "https://github.com/Philmist/eternalreturn-easy-storestats.git"

[dependency-groups]
dev = [
    "pytest>=9.0",
    "ruff>=0.14.5",
]

[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
test = [
  "pytest>=9.0",
]

[project.scripts]
er-stats = "er_stats.cli:main"
er-stats-tools = "er_stats.tools_cli:main"

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = [
  "tests",
  "integration",
]
strict = true

[tool.ruff.lint]
extend-select = [
  "FBT",
  "LOG",
  "PT",
]
